crates/ddlog-syntax/tests/inline/pass/function_ret_ty.dl
// kind:item
function foo(): Bar {}
