crates/ddlog-syntax/tests/inline/fail/double_comma_function_arg.dl
// kind:item
function foo(bar: Baz,,) {}
